@@ -1,3 +1,6 @@
+2014-01-28 Aurelien Degremont <aurelien.degremont@cea.fr>
+	* Better error handling when reading remote messages (ticket #174).
+
 2014-01-27 Florent Thery <florent.thery@bull.net>
 	* Disable quota handling for Lustre 2.4 and above (ticket #171)
 
